--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8081
 
 spring.datasource.url=jdbc:mysql://localhost:3306/finalprojectjavafinalproject?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=David320
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
